SYNCOPE-1332: Java 11 language features; use factory calls for immutable collections