@@ -19,7 +19,8 @@
 package org.apache.syncope.client.console.wicket.markup.head;
 
 import java.io.Serializable;
-import java.util.Arrays;
+import java.util.List;
+
 import org.apache.wicket.markup.head.HeaderItem;
 import org.apache.wicket.request.Response;
 
@@ -38,7 +39,7 @@ public class MetaHeaderItem extends HeaderItem implements Serializable {
 
     @Override
     public Iterable<?> getRenderTokens() {
-        return Arrays.asList("meta-" + key + "-" + value);
+        return List.of("meta-" + key + "-" + value);
     }
 
     @Override
