@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.client.enduser.wizards.any;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
@@ -162,7 +161,7 @@ public class Groups extends AbstractGroups {
 
         @Override
         public List<String> getDynMemberships() {
-            return Collections.emptyList();
+            return List.of();
         }
 
         /**
