@@ -23,9 +23,7 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
@@ -91,7 +89,7 @@ public class UserCR extends AnyCR implements GroupableRelatableTO {
         }
 
         public Builder relationships(final RelationshipTO... relationships) {
-            getInstance().getRelationships().addAll(Arrays.asList(relationships));
+            getInstance().getRelationships().addAll(List.of(relationships));
             return this;
         }
 
@@ -106,7 +104,7 @@ public class UserCR extends AnyCR implements GroupableRelatableTO {
         }
 
         public Builder memberships(final MembershipTO... memberships) {
-            getInstance().getMemberships().addAll(Arrays.asList(memberships));
+            getInstance().getMemberships().addAll(List.of(memberships));
             return this;
         }
 
@@ -121,7 +119,7 @@ public class UserCR extends AnyCR implements GroupableRelatableTO {
         }
 
         public Builder roles(final String... roles) {
-            getInstance().getRoles().addAll(Arrays.asList(roles));
+            getInstance().getRoles().addAll(List.of(roles));
             return this;
         }
 
@@ -238,7 +236,7 @@ public class UserCR extends AnyCR implements GroupableRelatableTO {
 
     @Override
     public List<MembershipTO> getDynMemberships() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @XmlElementWrapper(name = "roles")
