@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.core.persistence.jpa.dao;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -81,7 +80,7 @@ public class JPAConnInstanceDAO extends AbstractDAO<ConnInstance> implements Con
     public List<ConnInstance> findAll() {
         final Set<String> authRealms = AuthContextUtils.getAuthorizations().get(IdMEntitlement.CONNECTOR_LIST);
         if (authRealms == null || authRealms.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         TypedQuery<ConnInstance> query = entityManager().createQuery(
