@@ -19,8 +19,6 @@
 package org.apache.syncope.core.persistence.jpa.entity;
 
 import java.net.URI;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -98,8 +96,8 @@ public class JPAGatewayRoute extends AbstractGeneratedKeyEntity implements Gatew
     @Override
     public List<GatewayRouteFilter> getFilters() {
         return filters == null
-                ? Collections.emptyList()
-                : Arrays.asList(POJOHelper.deserialize(filters, GatewayRouteFilter[].class));
+                ? List.of()
+                : List.of(POJOHelper.deserialize(filters, GatewayRouteFilter[].class));
     }
 
     @Override
@@ -110,8 +108,8 @@ public class JPAGatewayRoute extends AbstractGeneratedKeyEntity implements Gatew
     @Override
     public List<GatewayRoutePredicate> getPredicates() {
         return predicates == null
-                ? Collections.emptyList()
-                : Arrays.asList(POJOHelper.deserialize(predicates, GatewayRoutePredicate[].class));
+                ? List.of()
+                : List.of(POJOHelper.deserialize(predicates, GatewayRoutePredicate[].class));
     }
 
     @Override
