@@ -21,7 +21,6 @@ package org.apache.syncope.ext.scimv2.api.data;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -32,7 +31,7 @@ public class SCIMSearchRequest extends SCIMBean {
 
     private static final long serialVersionUID = 5759362928661983543L;
 
-    private final List<String> schemas = Arrays.asList(Resource.SearchRequest.schema());
+    private final List<String> schemas = List.of(Resource.SearchRequest.schema());
 
     private final List<String> attributes = new ArrayList<>();
 
