@@ -22,7 +22,6 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.apache.syncope.ext.scimv2.api.type.Resource;
 
@@ -32,7 +31,7 @@ public class ServiceProviderConfig extends SCIMBean {
 
     private static final long serialVersionUID = 1027738509789460252L;
 
-    private final List<String> schemas = Arrays.asList(Resource.ServiceProviderConfig.schema());
+    private final List<String> schemas = List.of(Resource.ServiceProviderConfig.schema());
 
     private final Meta meta;
 
