@@ -27,7 +27,6 @@ import java.io.IOException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.HashSet;
@@ -437,7 +436,7 @@ public class PropagationTaskITCase extends AbstractTaskITCase {
 
             Set<Attribute> propagationAttrs = new HashSet<>();
             if (StringUtils.isNotBlank(tasks.getResult().get(0).getAttributes())) {
-                propagationAttrs.addAll(Arrays.asList(
+                propagationAttrs.addAll(List.of(
                         POJOHelper.deserialize(tasks.getResult().get(0).getAttributes(), Attribute[].class)));
             }
 
