@@ -30,8 +30,6 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.io.IOException;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
@@ -119,7 +117,7 @@ public class SCIMITCase extends AbstractITCase {
     }
 
     private WebClient webClient() {
-        return WebClient.create(SCIM_ADDRESS, Arrays.asList(new SCIMJacksonJsonProvider())).
+        return WebClient.create(SCIM_ADDRESS, List.of(new SCIMJacksonJsonProvider())).
                 accept(SCIMConstants.APPLICATION_SCIM_JSON_TYPE).
                 type(SCIMConstants.APPLICATION_SCIM_JSON_TYPE).
                 header(HttpHeaders.AUTHORIZATION, "Bearer " + adminClient.getJWT());
@@ -339,7 +337,7 @@ public class SCIMITCase extends AbstractITCase {
     }
 
     private SCIMUser getSampleUser(final String username) {
-        SCIMUser user = new SCIMUser(null, Collections.singletonList(Resource.User.schema()), null, username, true);
+        SCIMUser user = new SCIMUser(null, List.of(Resource.User.schema()), null, username, true);
         user.setPassword("password123");
 
         SCIMUserName name = new SCIMUserName();
